Fixed more spacing issues, background turns into GIF and hides play button on iOS device

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,18 @@
   font-family: 'Press Start 2P', cursive;
 }
 
+video::-webkit-media-controls-start-playback-button {
+  display: none !important;
+  opacity: 0;
+}
+
 video {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
+}
+
+@media screen and (max-width: 1024px) {
 }
