--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -81,7 +81,7 @@
     display: none;
   }
   
-  @media screen and (max-width: 991.98px) {
+  @media screen and (max-width: 1150px) {
     .NavbarItems {
       position: relative;
     }
@@ -128,7 +128,7 @@
     .navbar-logo {
       top: 0;
       left: 0;
-      transform: translate(-7%, 10%);
+      transform: translate(-7%, 5%);
       font-size: 1.75rem;
     }
   
@@ -137,10 +137,10 @@
       position: absolute;
       top: 0;
       right: 0;
-      transform: translate(-50%, 130%);
+      transform: translate(-50%, 110%);
       font-size: 1.8rem;
       cursor: pointer;
-      margin-right: 20px;
+      margin-right: 50px;
     }
   
     .fa-times {
