--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -32,14 +32,14 @@
     width: 1500px;
 }
 
-@media screen and (max-width: 991.98px) {
+@media screen and (max-width: 1200px) {
     .about-container {
         display: flex;
         flex-direction: column;
         margin-bottom: -500px;
         justify-content: center;
         align-items: center;
-        margin-bottom: -250px;
+        margin-bottom: 200px;
     }
 
     .about-me-container {
@@ -60,14 +60,25 @@
 
     .about-container > .about-me-container > .intro-1 {
         font-size: large;
-        width: 400px;
+        width: 650px;
     }
 
     .intro-2 {
         font-size: large;
-        width: 400px;
+        width: 650px;
         align-self: center;
         top: 0;
         flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .about-container > .about-me-container > .intro-1 {
+        width: 400px;
+    }
+
+    .intro-2 {
+        width: 400px;
     }
 }
