--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -30,9 +30,11 @@
 .btn {
     font-size: 100%;
     margin-top: 10px;
-    margin-right: -640px;
+    margin-right: -600px;
     float: right;
     right: 0;
+    width: 200px;
+    height: 70px;
 }
 
 .input-container > .input-name {
@@ -72,7 +74,7 @@
 
     .btn {
         right: 0;
-        margin-right: -240px;
+        margin-right: -200px;
         
     }
 
