--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,47 +6,79 @@
     justify-content: center;
     align-items: center;
     object-fit: contain;
-    margin-bottom: -180px;
+    margin-bottom: -170px;
+    margin-top: -500px;
 }
 
 .hero-container > h1 {
     color: #fff;
     font-size: 60px;
-    margin-top: -500px;
 }
 
 .hero-container > h2 {
-    margin-top: 8px;
-    margin-left: 120px;
+    margin-left: 210px;
     margin-right: 120px;
+    margin-bottom: -100px;
     color: #fff;
     font-size: 32px;
+    width: 1500px;
+}
+
+.btn-mobile > .btn{
+    margin-top: 150px;
+    width: 400px;
+    height: 150px;
+    margin-bottom: -1000px;
+    margin-left: 300px;
 }
 
 .btn-mobile {
-    width: 300px;
-    margin-left: -1300px;
-    margin-top: 150px;
+    margin-left: -1100px;
+}
+
+@media screen and (max-height: 1000px) {
+    .hero-container {
+        margin-top: 0px;
+        margin-bottom: 100px;
+    }
 }
 
 @media screen and (max-width: 991.98px) {
-    .hero-container > h1 {
-        font-size: 70px;
-        height: 400px;
+
+    .hero-container {
+        margin-bottom: 0px;
     }
 
     .hero-container > h1 {
         font-size: 50px;
-        margin-top: 300px;
+        margin-top: 100px;
+        height: 300px;
+        padding-bottom: 100px;
+        width: 700px;
+        margin-left: 10px;
     }
 
     .hero-container > h2 {
         font-size: 30px;
+        width: 700px;
+        margin-left: 140px;
+        margin-top: -100px;
     }
 
-    .btn-mobile {
+    .btn-mobile > .btn{
+        margin-left: 660px;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .hero-container > h1 {
         width: 400px;
-        margin-left: -620px;
+    }
+
+    .hero-container > h2 {
+        width: 400px;
     }
 
 }
